# matika

./: .coverage  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  COPYRIGHT.txt  Dockerfile  INSTALL_GUIDE.txt  LICENSE  README.md  RELEASES.md  VERSION  alembic.ini  cookies.txt  coverage.xml  docker-compose.yml  install.py  launcher.py  matika.spec  package-lock.json  package.json  plugins.dev.json.example  pyproject.toml  reproduction_script.py  requirements.txt  test_roles_endpoint.py  tsconfig.json
.husky/: pre-commit
doc/: ARCHITECTURE.md  DEPLOYMENT.md  INSTALL.md
docs/: ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPER_GUIDE.md  INSTALL.md  frozen-app.md  menu-loading.md  npm-publishing.md  plugins.md  release-pipeline.md  runtime-patterns.md  screen-schema.md
migrations/: env.py
scripts/: README.md  build_standalone.py  dev_setup.py  install.py  launcher.py  matika.spec  milestone_tasks.yaml  release.py  start_milestone.py  sync_version.py  windows_installer.iss
tests/: conftest.py  test_applug_system.py  test_auth.py  test_basic.py  test_bulk_ops.py  test_coverage_boost.py  test_csrf.py  test_data_migration.py  test_dev_setup.py  test_endpoints.py  test_eyerate_plugin.py  test_filters.py  test_functional_test_contract.py  test_i18n_completeness.py  test_launcher.py  test_logging_setup.py  test_main.py  test_matika_screens_data.py  test_menu_hub.py  test_menu_loader.py  test_metadata_rendering.py  test_option_sources_rendering.py  test_page_types.py  test_paths.py  test_permission_checks.py  test_permissions.py  test_persistence.py  test_release.py  (+13 more)
(+90 files in other folders)
