[project]
name = "matika"
version = "0.0.4"
description = "High-performance yield tracking and security maintenance application"
readme = "README.md"
authors = [
    { name = "Patrick Tallman", email = "tallman.patrick@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.136.1",
    "uvicorn>=0.46.0",
    "sqlalchemy>=2.0.49",
    "starlette>=1.2.0",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.26",
    "itsdangerous>=2.2.0",
    "anyio>=4.13.0",
    "authlib>=1.7.2",
    "bcrypt>=5.0.0",
    "cryptography>=47.0.0",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.5.0",
    "httpx>=0.28.1",
    "pydantic>=2.13.3",
    "pillow>=12.2.0",
    "psutil>=6.0.0",
    "psycopg2-binary>=2.9.12",
    "pymysql>=1.1.2",
    "pyyaml>=6.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = [
  "/scripts",
  "/milestone_tasks.yaml",
  "/.pytest_cache",
  "/tests",
]

[tool.hatch.build.targets.wheel]
packages = ["src/matika"]
exclude = [
  "**/tests",
]

[dependency-groups]
dev = [
    "anyio>=4.13.0",
    "httpx2>=2.0.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
]
